Colaboratory를 통해 생성됨

--- a/Study0.ipynb
+++ b/Study0.ipynb
@@ -6,7 +6,7 @@
       "name": "Study0.ipynb",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyNUTA4vF8ie3/afMsrfwOSa",
+      "authorship_tag": "ABX9TyMzeveKNi6k1KzmLgHmn8XL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,10 +33,23 @@
       "source": [
         "class b():\n",
         "  def __init__(self,row,col):\n",
-        "    self.pieces[i] = [None]*row\n",
+        "    self.pieces = [None]*row\n",
         "    for i in range(len(self.pieces)):\n",
         "      self.pieces[i] = [0]*col\n",
         "\n",
+        "  def pmoves(self,n):\n",
+        "    moves = set()\n",
+        "\n",
+        "    for row in range(len(self.pieces)):\n",
+        "      for col in range(len(self.pieces[0])):\n",
+        "       \n",
+        "        moves.add((row,col))\n",
+        "        \n",
+        "    return moves\n",
+        "  \n",
+        "bb = b(4,3)\n",
+        "c =bb.pmoves(3)\n",
+        "print('\\n',c)\n",
         "  \n",
         "\n",
         "\n"
